fixed issue related to navbar collapse and margin in content div

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1{
     color: #112d4e;
     box-shadow: 10px 10px 30px grey;
     padding: 10%;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 .projects{
